; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashsort.c__h_indexbuild.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashsort.c__h_indexbuild.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@PROGRESS_CREATEIDX_TUPLES_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_h_indexbuild(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %6, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 4
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @tuplesort_performsort(i32 %9)
  br label %11

11:                                               ; preds = %17, %2
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = call i32* @tuplesort_getindextuple(i32 %14, i32 1)
  store i32* %15, i32** %5, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %28

17:                                               ; preds = %11
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @_hash_doinsert(i32 %20, i32* %21, i32 %22)
  %24 = load i32, i32* @PROGRESS_CREATEIDX_TUPLES_DONE, align 4
  %25 = load i64, i64* %6, align 8
  %26 = add nsw i64 %25, 1
  store i64 %26, i64* %6, align 8
  %27 = call i32 @pgstat_progress_update_param(i32 %24, i64 %26)
  br label %11

28:                                               ; preds = %11
  ret void
}

declare dso_local i32 @tuplesort_performsort(i32) #1

declare dso_local i32* @tuplesort_getindextuple(i32, i32) #1

declare dso_local i32 @_hash_doinsert(i32, i32*, i32) #1

declare dso_local i32 @pgstat_progress_update_param(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
